--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://lbs-dao-55120-w-3743.dbdns.bilibili.co:3743/local_city
-spring.datasource.username=local_city
-spring.datasource.password=eeBUPQbclCRK4bfUDF8iSNEPwCOVQ8Ee
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local_city
-#spring.datasource.username=root
-#spring.datasource.password=19910820WT
+#spring.datasource.url=jdbc:mysql://lbs-dao-55120-w-3743.dbdns.bilibili.co:3743/local_city
+#spring.datasource.username=local_city
+#spring.datasource.password=eeBUPQbclCRK4bfUDF8iSNEPwCOVQ8Ee
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/local_city
+spring.datasource.username=root
+spring.datasource.password=19910820WT
 server.port = 8099
